--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@tailwindcss/forms": "^0.5.10",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "next": "latest",
     "next-auth": "5.0.0-beta.25",
+    "pg": "^8.13.3",
     "postcss": "8.5.1",
     "postgres": "^3.4.5",
     "react": "latest",
@@ -25,6 +28,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.10.7",
+    "@types/pg": "^8.11.11",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3"
   }
